syntax = "proto3";

package api;
option go_package = "/api";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "google/protobuf/timestamp.proto";

import "pagination.proto";
import "attributes.proto";

message EntityStorage {
  int64 id = 1;
  string entity_id = 2;
  string state = 3;
  map<string, Attribute> attributes = 4;
  google.protobuf.Timestamp created_at = 99;
}

message GetEntityStorageRequest {
  uint64 page = 1;
  uint64 limit = 2;
  string sort = 3;
  optional string entity_id = 4;
  optional string start_date = 5;
  optional string end_date = 6;
}

message GetEntityStorageResult {
  repeated EntityStorage items = 1;
  Meta meta = 2;
}

service EntityStorageService {

  rpc GetEntityStorageList (GetEntityStorageRequest) returns (GetEntityStorageResult){
    option (google.api.http) = {
      get: "/v1/entity_storage"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }
}
